--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color:blue">Welcome babay no no !!!</h1>
+    <h1 style="color:blue">Welcome babay no no </h1>
     <h2>Hey Baby</h2>
 </body>
 </html>
